<resources>
    <string name="app_name">IteraTime</string>
    <string name="title_activity_jadwal">JadwalActivity</string>
    <!--<string-array name="tab_text">-->
    <!--<item>Senin</item>-->
    <!--<item>Selasa</item>-->
    <!--<item>Rabu</item>-->
    <!--<item>Kamis</item>-->
    <!--<item>JUmat</item>-->
    <!--<item>Sabtu</item>-->
    <!--<item>Minggu</item>-->

    <!--</string-array>-->
    <string name="tab_text_1">Senin</string>
    <string name="tab_text_2">Selasa</string>
    <string name="tab_text_3">Rabu</string>
    <string name="tab_text_4">Kamis</string>
    <string name="tab_text_5">Jumat</string>
    <string name="tab_text_6">Sabtu</string>
    <string name="tab_text_7">Minggu</string>
    <string-array name="hari_array">
        <item>Senin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>Jumat</item>
        <item>Sabtu</item>
        <item>Minggu</item>
    </string-array>

    <string-array name="gedung">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>GKU</item>
        <item>Labtek</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hari Senin</string>
    <string name="title_activity_maps">Map</string>
    <string name="about_us">About Us</string>
    <string name="faq">FAQ</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="title_activity_direction_to_gedung">Map</string>
    <string name="map">MAP</string>
    <string name="_101">101</string>
    <string name="a">A</string>
    <string name="gedung">Gedung </string>
    <string name="nama_dosen">Nama Dosen</string>
    <string name="senin">Senin</string>
    <string name="_00_00">00:00</string>
    <string name="s_d">s/d</string>
    <string name="pukul">Pukul :</string>
    <string name="_2">2</string>
    <string name="sks">SKS :</string>
</resources>
