<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.ViewSingleJadwalActivity">

    <LinearLayout
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

        <TextView
                android:id="@+id/matakuliah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nama Mata Kuliah"
                android:textSize="25sp"
                android:layout_marginTop="15dp"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/sks"
                      android:textSize="20sp"
                      android:layout_marginTop="10dp"
                      android:layout_marginRight="12dp"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/sks"
                      android:text="@string/_2"
                      android:textSize="20sp"
                      android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            <TextView
                    android:text="@string/pukul"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/dari"
                      android:layout_marginLeft="12dp"
                      android:text="@string/_00_00"
                      android:layout_marginTop="10dp"
                      android:textSize="20sp"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="5dp"
                      android:text="@string/s_d"
                      android:gravity="center"
                      android:layout_gravity="center"
                      android:layout_marginTop="5dp"
                      android:layout_marginRight="5dp"
                      android:textSize="10sp"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/_00_00"
                      android:textSize="20sp"
                      android:layout_marginTop="10dp"
                      android:id="@+id/sampai"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_marginLeft="20dp"
                      android:text="@string/senin"
                      android:layout_marginTop="10dp"
                      android:id="@+id/hari"
                      android:textSize="19sp"
                      android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/nama_dosen"
                  android:textStyle="bold"
                  android:id="@+id/dosen"
                  android:layout_marginTop="10dp"
                  android:textSize="20sp"/>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Gedung : "
                      android:layout_marginTop="10dp"
                      android:textSize="20sp"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/gedung"
                      android:text="A "
                      android:layout_marginTop="10dp"
                      android:textSize="20sp"/>

            <TextView android:layout_width="wrap_content"
                      android:id="@+id/ruangan"
                      android:text="@string/_101"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textSize="20sp"/>

        </LinearLayout>

        <Button android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/showMap"
                android:text="@string/map"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

    </LinearLayout>

</ScrollView>